# day_planner

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  justfile  planner.db  planner.spec  pyproject.toml  todo.md
.github/workflows/: ci.yml
app/: api.py  database.py  models.py  ui.css  ui.py
app_planner/: api.py  backup.py  database.py  models.py  services.py  ui.css  ui.py
app_projmgmt/: __init__.py  api.py  database.py  models.py  rules.py  services.py
tests/: test_backup.py  test_database.py  test_projmgmt_database.py
web/: index.html  package-lock.json  package.json  playwright.config.js  tsconfig.json  vite.config.js
web/e2e/: screenshots.spec.js  smoke.spec.js
web/src/: main.jsx  styles.css
web/src/api/: client.ts
web/src/api-reference/: ApiReference.jsx
web/src/domain/: cards.js  cards.test.js  constants.d.ts  constants.js  csv.js  csv.ts  dates.js  planner-csv.test.ts  planner.js  planner.ts  types.ts
web/src/shared/: components.jsx
web/src/shortcuts/: ShortcutReference.jsx
