[project]
name = "daily-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.3",
    "pyinstaller>=6.13.0",
    "textual>=3.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.5",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
pythonpath = [
    "app"
]
